# OuroC

./: .gitignore  AGENT.md  AGENT_SETUP.md  Cargo.toml  ENTERPRISE_PRIVACY_PLAN.md  FIRST_PAYMENT_TODO.md  IMPLEMENTATION_VERIFICATION.md  LICENSE  LICENSE.md  README.md  REPOSITORY_STRUCTURE.md  SDK_CONSOLIDATION.md  SECURITY_AUDIT_REPORT.md  USER_MANUAL.md  Vision.md  X402_A2A_ROADMAP.md  admin_manual.md  build_agents.py  deploy.sh  dfx.json  mops.toml  test_timer.sh
.mops/base-x-encoder@1.0.0/: mops.toml
.mops/base-x-encoder@1.0.0/src/: lib.mo
Archive/: agents_requirements.txt  kybra-0.7.1-py3-none-any.whl
Archive/demo-dapp/: next.config.js  tailwind.config.js
Archive/demo-dapp/components/: ClientOnlyWrapper.tsx  Footer.tsx  GridOnRamp.tsx  Header.tsx  Layout.tsx  ManualTriggerButton.tsx  MockSubscriptionCard.tsx  Navbar.tsx  OuroCShowcase.tsx  PaymentReliabilityManager.tsx  RealSubscriptionCard.tsx  StatsGrid.tsx  TokenSelector.tsx  X402PaymentDemo.tsx
Archive/demo-dapp/docs/: AUTHORIZATION_MODES.md
Archive/demo-dapp/pages/: _app.tsx  _document.tsx  index.tsx  merchant-dashboard.tsx  pricing.tsx
Archive/demo-dapp/utils/: tokenUtils.ts
Archive/docs/: IP_PROTECTION.md
Archive/docs/architecture/: ARCHITECTURE.md
Archive/docs/archive/: PHASE1_SECURITY.md
Archive/src/: README.md
Archive/src/admin-panel/: README.md  index.html  package.json
Archive/src/agents/: dfx.json  (+6 more)
Archive/src/timer_rust/: Cargo.toml
Archive/src/timer_rust/src/: cycle_management.rs  health.rs  lib.rs  license.rs  solana.rs  state.rs  subscription_manager.rs  threshold_ed25519.rs  timer.rs  types.rs
OuroC-Mesos/: .gitignore  CRITICAL_ICP_SIGNATURE_ISSUE.md  Cargo.toml  DEPLOYMENT.md  README.md  URGENT_SIGNATURE_FIX.md  dfx.json  new_nonce_keypair  test-end-to-end.md
OuroC-Mesos/frontend/: .env.example  .ic-assets.json  INVOICE_BACKEND_REQUIREMENTS.md  README.md  index.html  package.json  vite.config.ts
OuroC-Mesos/src/timer_rust/: Cargo.toml  README.md  dfx.json
OuroC-Mesos/src/timer_rust/src/: authorization.rs  health.rs  lib.rs  lib_complex.rs  lib_simple.rs  license.rs  nonce_manager.rs  sol_rpc.rs  solana.rs  solana_client.rs  solana_rpc.rs  state.rs  subscription_manager.rs  threshold_ed25519.rs  timer.rs  types.rs  utils.rs
archive_docs/package_sdk_docs/: FRONTEND_NOTIFICATIONS.md
archive_examples/package_sdk_examples/: x402-ai-agent-integration.ts
demo-api/: package.json  tsconfig.json
demo-api/src/: index.ts
demo-client/: package.json
demo-client/src/: demo.ts
demo-dapp/: .env.local.example  README.md  next.config.js  package.json  tsconfig.json
demo-dapp/components/: APISubscriptionManager.tsx  AgentPaymentDemo.tsx  FeatureCard.tsx  GridSubscriberLogin.tsx  GridSubscriptionModal.tsx  Header.tsx  ManualTriggerButton.tsx  Navbar.tsx  RealSubscriptionCard.tsx  WalletButton.tsx
demo-dapp/pages/: _app.tsx  a2a-demo.tsx  agent-economy.tsx  business-signup.tsx  flow.tsx  grid-merchant.tsx  index.tsx  merchant-dashboard.tsx  pricing.tsx
demo-dapp/styles/: globals.css
demo-dapp/utils/: ai-agent.ts  errorHandler.ts  subscriptionStatus.ts
docs/: AGENT.md  CODEBASE_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT.md  USER_MANUAL.md  VIBECODING_OPTIMISATION.md  X402_A2A_ROADMAP.md
docs/architecture/: ARCHITECTURE.md  PROJECT_OVERVIEW.md  SDK_ARCHITECTURE.md  SECURITY_ARCHITECTURE.md
docs/archive/: SUBSCRIPTION_FLOW.md
docs/guides/: ICP_CANISTER_DEPLOYMENT.md  SECURITY_QUICK_START.md
scripts/: deploy-icp-devnet.sh
solana-contract/ouro_c_subscriptions/: Anchor.toml  DEVNET_DEPLOYMENT.md  DEVNET_INTEGRATION_SUMMARY.md  DEVNET_TESTING_GUIDE.md  package.json
solana-contract/ouro_c_subscriptions/programs/ouro_c_subscriptions/: Cargo.toml
solana-contract/ouro_c_subscriptions/programs/ouro_c_subscriptions/src/: crypto.rs  jupiter_swap.rs  lib.rs
solana-contract/ouroc_prima/: .env.devnet.example  Anchor.toml  DEMO_CONFIG.md  DEVNET_DEPLOYMENT.md  ICP_CONFIG.md  ONE_CLICK_SUBSCRIPTION_FIX.md  SPL_MEMO_VERIFICATION.md  USE_CASE_SIMULATION.md  WARNINGS_FIXED.md  check_config.ts  frontend-timer-service.ts  initialize.ts  run-basic-test.sh  update_icp_key.ts  update_to_icp_sig.js
solana-contract/ouroc_prima/programs/ouroc_prima/: Cargo.toml
solana-contract/ouroc_prima/programs/ouroc_prima/src/: constants.rs  crypto.rs  data_structures.rs  errors.rs  instruction_handlers.rs  jupiter_swap.rs  lib.rs  payment_helpers.rs  price_oracle.rs
src/admin-panel/: .gitignore  index.html
src/agents/: solana_monitoring_agent.py
src/enterprise-privacy/: README.md
src/license_registry/: LicenseRegistry.mo
src/timer/: AUTHORIZATION_GUIDE.md  authorization.mo  balance_monitor.mo  main.mo  notification_system.mo  security.mo  sol_rpc_types.mo  solana.mo  solana_transaction.mo  threshold_ed25519.mo
website/: README.md  index.html
(+93 files in other folders)
