[package]
name = "ouroc-timer-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# IC CDK for canister development
ic-cdk = "0.15"
ic-cdk-timers = "0.7"
ic-cdk-macros = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.10"

# Cryptography
sha2 = "0.10"
bs58 = "0.5"

# Utilities
hex = "0.4"

# Error handling
thiserror = "1.0"

# Math
num-traits = "0.2"

# For stable storage
ic-stable-structures = "0.6"

# WASM compatibility
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
ic-stable-structures = "0.6"

[features]
default = []