[package]
name = "ouroc-timer-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# IC CDK for canister development
ic-cdk = "0.15"
ic-cdk-timers = "0.7"
ic-cdk-macros = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.10"

# Cryptography
sha2 = "0.10"
bs58 = "0.5"
ed25519-dalek = "2.0"

# Utilities
hex = "0.4"
base64 = "0.21"
bincode = "1.3"

# Error handling
thiserror = "1.0"

# Math
num-traits = "0.2"

# For stable storage
ic-stable-structures = "0.6"

# WASM compatibility (custom feature required for IC canisters)
getrandom = { version = "*", default-features = false, features = ["custom"] }

# SOL RPC Client - disable default features to avoid zstd-sys
sol_rpc_client = { version = "3.0", default-features = false, features = ["ed25519"] }
sol_rpc_types = "3.0"

# Override account decoder to disable zstd (must come before sol_rpc_client uses it)
solana-account-decoder-client-types = { version = "3.0.8", default-features = false }
solana-transaction-status-client-types = "3.0.8"

# Solana SDK (version 3.0.0 to match sol-rpc-canister)
solana-hash = "3.0"
solana-instruction = "3.0"
solana-message = "3.0"
solana-pubkey = { version = "3.0", features = ["curve25519"] }
solana-signature = "3.1"
solana-transaction = "3.0"
solana-system-interface = "2.0"

[dev-dependencies]
ic-stable-structures = "0.6"

[features]
default = []