[package]
name = "ouro_c_subscriptions"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ouro_c_subscriptions"

[features]
default = ["devnet-bypass-signature"]
mainnet = []
devnet-bypass-signature = []  # ⚠️ DEVNET ONLY: Bypasses Ed25519 signature verification
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
pyth-solana-receiver-sdk = "0.2.0"
spl-memo = { version = "5.0.0", features = ["no-entrypoint"] }

